<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_map">Map Location</string>
    <string name="action_share">Share</string>
    <string name="title_activity_detail">Weather Detail</string>
    <string name="pref_location_label">Location</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_default" translatable="false">94043</string>
    <string name="pref_units_label">Pick Your Units</string>
    <string name="pref_units_key" translatable="false">units</string>
    <string name="pref_units_metric">metric</string>
    <string name="pref_units_imperial">imperial</string>
    <string-array name="pref_units_entries">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>
    <string-array name="pref_units_entry_values">
        <item>metric</item>
        <item>imperial</item>
    </string-array>
    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>
    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>
    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date">
        <xliff:g id="day_of_week">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g>
    </string>
    <!--Temperature format -->
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>
    <!--Windspeed format in mph [CHAR LIMIT=NONE]-->
    <string name="format_wind_mph">Wind: <xliff:g id="wind_speed">%1.0f</xliff:g> mph <xliff:g id="wind_dir">%2$s</xliff:g></string>
    <!-- Windspeed format in km/h [CHAR LIMIT=NONE] -->
    <string name="format_wind_kmh">Wind: <xliff:g id="wind_speed">%1.0f</xliff:g> km/h <xliff:g id="wind_dir">%2$s</xliff:g></string>
    <!-- Pressure format in hPa [CHAR LIMIT=NONE] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>
    <!-- Humidity format in % [CHAR LIMIT=NONE] -->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>

    <string name="sync_account_type">sunshine.example.com</string>
    <string name="content_authority">com.example.micyeung.sunshine.app</string>

    <!-- Notification Format -->
    <string name="format_notification">
    Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
    </string>
    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>
    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Weather Notifications</string>
    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <!-- Strings related to transition animations -->
    <string name="transition_image" translatable="false">transition_image</string>
    <string name="transition_forecast_text" translatable="false">transition_forecast_text</string>

    <string name="toast_added_reminder">Added reminder.</string>
    <string name="toast_deleted_reminder">Removed reminder.</string>
</resources>
